<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity"
    android:background="@color/colorBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        <ImageView
            android:id="@+id/imgPoster"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/poster_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            android:background="@drawable/bg_cardview_pink"/>

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imgPoster"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtGenres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imgPoster"
            app:layout_constraintTop_toBottomOf="@id/txtTitle"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/genres"/>

        <TextView
            android:id="@+id/txtMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/imgPoster"
            app:layout_constraintTop_toBottomOf="@id/txtGenres"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_cardview_pink"
            android:text="@string/movie"
            android:padding="8dp"
            android:textColor="@color/colorWhite"
            android:drawableStart="@drawable/ic_movie_white"
            android:drawablePadding="4dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/txtTvShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/imgPoster"
            app:layout_constraintTop_toBottomOf="@id/txtGenres"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_cardview_pink"
            android:text="@string/tv_show"
            android:padding="8dp"
            android:textColor="@color/colorWhite"
            android:drawableStart="@drawable/ic_tv_show_white"
            android:drawablePadding="4dp"
            android:visibility="gone"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_cardview_white"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imgPoster">

            <TextView
                android:id="@+id/txtRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_rating"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtRating" />

            <TextView
                android:id="@+id/txtRuntime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/runtime"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_runtime"
                app:layout_constraintStart_toStartOf="@id/txtRuntime"
                app:layout_constraintTop_toBottomOf="@+id/txtRuntime" />

            <TextView
                android:id="@+id/txtYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_year"
                app:layout_constraintStart_toStartOf="@id/txtYear"
                app:layout_constraintTop_toBottomOf="@+id/txtYear" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/titleOverview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/overview"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <TextView
            android:id="@+id/txtOverview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/overview"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleOverview" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>